--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -38,6 +39,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -60,6 +62,27 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/img..png
+    - images/img2.jpg
+    - images/im2.png
+    - images/img.png
+    - images/img_1.png
+    - images/img_2.png
+    - images/img_3.png
+    - images/img_4.png
+    - images/img_5.png
+    - images/img_6.png
+    - images/img_7.png
+    - images/img_8.png
+    - images/img_9.png
+    - images/img_10.png
+    - images/img_11.png
+    - images/1im.jpg
+    - images/2im.jpg
+    - images/3im.jpg
+    - images/4im.jpg
+    - images/img1.jpg
+    - images/img_13.png
+    - images/img_14.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
